syntax = "proto3";

import "google/protobuf/empty.proto";

package derailed.thomas;

service Thomas {
    rpc fetch_track (JustID) returns (JsonResult);
    rpc fetch_tracks (JustIDQuantity) returns (JsonResult);
    rpc fetch_user (JustID) returns (JsonResult);
    rpc fetch_user_feed (JustID) returns (JsonResult);
    rpc fetch_user_track (FetchTrackFromUser) returns (JsonResult);
    rpc update_track (JustID) returns (google.protobuf.Empty);
    rpc update_user (JustID) returns (google.protobuf.Empty);
}

message JsonResult {
    string result = 1;
}

message JustID {
    int64 id = 1;
}

message JustIDQuantity {
    int64 id = 1;
    int32 quantity = 2;
}

message FetchTrackFromUser {
    int64 track_id = 1;
    int64 user_id = 2;
}
